# ghc.dev

./: .gitignore  Makefile  README.md  cabal.project  flake.nix  ghc-dev-webgen.cabal  index.html  shell.nix
.buildkite/: pipeline.yml
.github/workflows/: deploy.yml
deployment/: README.md  main.nix  main.tf  shell.nix  versions.tf
src/: Main.hs  ghc-dev-webgen.cabal
src/Pages/: Common.hs  DH.hs  Graph.hs
