cabal-version: 2.2
name: ghc-dev-webgen
version: 0.1
synopsis: The https://ghc.dev Website Generator
build-type: Simple

executable ghc-dev-webgen

  main-is:
    Main.hs

  other-modules:
    Pages.DH

  build-depends:
    base,
    blaze-html,
    blaze-markup,
    bytestring,
    clay,
    containers,
    mtl,
    text,
    filepath,
    neat-interpolation,
    generic-lens,
    lens,
    directory,
    time

  hs-source-dirs:
    src

  ghc-options:
    -Wall

  default-language:
    Haskell2010

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NegativeLiterals
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    NamedFieldPuns
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns
    BlockArguments
