cabal-version: 2.2
name: ghc-dev-webgen
version: 0.1
synopsis: The https://ghc.dev Website Generator
build-type: Simple

executable ghc-dev-webgen

  main-is:
    Main.hs

  other-modules:
    Pages.Common
    Pages.DH
    Pages.Graph

  build-depends:
    base,
    blaze-html,
    blaze-markup,
    bytestring,
    binary,
    clay,
    containers,
    mtl,
    text,
    filepath,
    neat-interpolation,
    generic-lens,
    lens,
    directory,
    time,
    typed-process,
    xeno,
    xmlbf-xeno,
    xmlbf,
    gi-cairo,
    gi-cairo-render,
    gi-cairo-connector,
    gi-pango,
    gi-pangocairo,

  ghc-options:
    -Wall

  default-language:
    GHC2021

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NegativeLiterals
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    NamedFieldPuns
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns
    BlockArguments
